[package]
name = "wandb"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.5"
graphql_client = "0.15.0"
impl_from_tuple = { path = "./impl_from_tuple" }
reqwest = { version = "0.13.0-rc.1", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.17"
tokio = "1.41.0"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
